1. Метод .of [#70623 #175864]